@startuml

interface RenderInterface {
  {abstract} reRenderView()
}
interface DensityInterface {
  {abstract} setDensity(density: number)
  {abstract} getDensity()
}
class Density {
  table: RenderInterface
}
DensityInterface <|.. Density
RenderInterface <-o  Density
note left on link
setDensity(density) {
  // ... code ...
  table.reRenderView()
}
end note
Density <-- CLIENT
note left on link
  density.setDensity(2)
end note
@enduml
